elco-salesforce/force-app/main/default/objects/Quote/fields/Anagrafica_Contatto__c.field-meta.xml
<CustomField>
  <fullName>Anagrafica_Contatto__c</fullName>
  <label>Anagrafica Contatto</label>
  <type>Lookup</type>
  <referenceTo>Contact</referenceTo>
  <relationshipName>QuoteAnagraficaContatti</relationshipName>
</CustomField>