elco-salesforce/force-app/main/default/objects/Quote/fields/Customer_Code_Snapshot__c.field-meta.xml
<CustomField>
  <fullName>Customer_Code_Snapshot__c</fullName>
  <label>Customer Code Snapshot</label>
  <type>Text</type>
  <length>80</length>
</CustomField>