elco-salesforce/force-app/main/default/objects/Quote/fields/Giorni_Consegna__c.field-meta.xml
<CustomField>
  <fullName>Giorni_Consegna__c</fullName>
  <label>Giorni Consegna</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>0</scale>
</CustomField>