elco-salesforce/force-app/main/default/objects/Quote/fields/Inside_Sales__c.field-meta.xml
<CustomField>
  <fullName>Inside_Sales__c</fullName>
  <label>Inside Sales</label>
  <type>Lookup</type>
  <referenceTo>User</referenceTo>
  <relationshipName>QuoteInsideSalesUsers</relationshipName>
</CustomField>