elco-salesforce/force-app/main/default/objects/Quote/fields/Note_Special_Needs__c.field-meta.xml
<CustomField>
  <fullName>Note_Special_Needs__c</fullName>
  <label>Note Special Needs</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>