elco-salesforce/force-app/main/default/objects/Quote/fields/Num_Circuiti__c.field-meta.xml
<CustomField>
  <fullName>Num_Circuiti__c</fullName>
  <label>Num Circuiti</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>0</scale>
</CustomField>