elco-salesforce/force-app/main/default/objects/Quote/fields/Purchase_Order__c.field-meta.xml
<CustomField>
  <fullName>Purchase_Order__c</fullName>
  <label>Purchase Order</label>
  <type>Text</type>
  <length>80</length>
</CustomField>