elco-salesforce/force-app/main/default/objects/Quote/fields/Servizio_90_10__c.field-meta.xml
<CustomField>
  <fullName>Servizio_90_10__c</fullName>
  <label>Servizio 90 10</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>