elco-salesforce/force-app/main/default/objects/Quote/fields/Servizio__c.field-meta.xml
<CustomField>
  <fullName>Servizio__c</fullName>
  <label>Servizio</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>Normal</fullName><default>false</default><label>Normal</label></value>
      <value><fullName>Fast</fullName><default>false</default><label>Fast</label></value>
      <value><fullName>Guarantee</fullName><default>false</default><label>Guarantee</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>