elco-salesforce/force-app/main/default/objects/Quote/fields/Trasporto__c.field-meta.xml
<CustomField>
  <fullName>Trasporto__c</fullName>
  <label>Trasporto</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value><fullName>A carico ELCO</fullName><default>false</default><label>A carico ELCO</label></value>
      <value><fullName>A carico Cliente</fullName><default>false</default><label>A carico Cliente</label></value>
      <value><fullName>Ritiro in sede</fullName><default>false</default><label>Ritiro in sede</label></value>
      <value><fullName>Altro</fullName><default>false</default><label>Altro</label></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>